--- a/app/src/main/res/layout/inicio_corresponsal.xml
+++ b/app/src/main/res/layout/inicio_corresponsal.xml
@@ -7,7 +7,7 @@
 
 
     <include
-        layout="@layout/vista_reutilizar"
+        layout="@layout/vista_reutilizar_corresponsal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#FFFFFF" />
@@ -23,63 +23,14 @@
         android:onClick="mostrarMenuCorresponsal"
         app:srcCompat="@drawable/options" />
 
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerlistadoClientesAdmin"
+        android:id="@+id/recyclerViewCorresponsal"
         android:layout_width="match_parent"
         android:layout_height="528dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="123dp"
-        android:layout_marginBottom="80dp" />
-
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="252dp"
-        android:layout_height="38dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="19dp"
-        android:layout_marginEnd="140dp"
-        android:layout_marginBottom="691dp"
-        android:hint="@string/nombreCorresponsal"
-        android:textColor="#FF5F58"
-        android:textColorHint="#FF5F58"
-        android:textSize="20dp"
-        android:fontFamily="@font/ubuntumedium"/>
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="21dp"
-        android:layout_marginEnd="193dp"
-        android:layout_marginBottom="668dp"
-        android:fontFamily="@font/ubuntumedium"
-        android:hint="@string/saldoCorresponsal"
-        android:textColor="#FF5F58"
-        android:textColorHint="#FF5F58"
-        android:textSize="13dp" />
-
-    <TextView
-        android:id="@+id/textViewh"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="21dp"
-        android:layout_marginEnd="193dp"
-        android:layout_marginBottom="643dp"
-        android:hint="@string/cuentaCorresponsal"
-        android:textColor="#FF5F58"
-        android:textColorHint="#FF5F58"
-        android:textSize="13dp"
-        android:fontFamily="@font/ubuntumedium"/>
-
+        android:layout_marginTop="120dp"
+        android:layout_marginBottom="83dp" />
 
 </RelativeLayout>
