--- a/app/src/main/res/layout/actualizarcorresponsal.xml
+++ b/app/src/main/res/layout/actualizarcorresponsal.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ViewsAdmin.CrearClienteAdmin"
+    tools:context=".Views.CrearClienteAdmin"
     android:orientation="horizontal">
 
 
@@ -35,15 +35,16 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="47dp"
-        android:layout_marginTop="106dp"
+        android:layout_marginStart="46dp"
+        android:layout_marginTop="107dp"
         android:layout_marginEnd="66dp"
-        android:layout_marginBottom="590dp"
+        android:layout_marginBottom="589dp"
         android:fontFamily="@font/ubuntumedium"
         android:hint="@string/actualizarCorresponsal"
         android:textAlignment="center"
         android:textColorHint="@color/black"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/contraseñaActualCorres"
@@ -52,14 +53,15 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="60dp"
         android:layout_marginTop="188dp"
-        android:hint="Contraseña actual">
+        android:hint="@string/contraseñaActual">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:textAlignment="viewStart"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:fontFamily="@font/ubuntumedium"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -69,14 +71,15 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="60dp"
         android:layout_marginTop="288dp"
-        android:hint="Contraseña nueva">
+        android:hint="@string/contraseñaNueva">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:textAlignment="viewStart"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:fontFamily="@font/ubuntumedium"/>
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -88,7 +91,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="60dp"
         android:layout_marginTop="388dp"
-        android:hint="Confirmar contraseña nueva">
+        android:hint="@string/ConfirmarContraseñaNueva">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
