--- a/app/src/main/res/layout/alertcancel.xml
+++ b/app/src/main/res/layout/alertcancel.xml
@@ -47,9 +47,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="54dp"
+        android:layout_marginStart="49dp"
+        android:layout_marginEnd="55dp"
         android:layout_marginBottom="470dp"
+        android:fontFamily="@font/ubuntumedium"
         android:textAlignment="center"
         android:textSize="25dp"
         android:textStyle="bold" />
@@ -67,5 +68,6 @@
         android:fontFamily="@font/ubuntumedium"
         android:hint="Salir"
         android:textColorHint="@color/white"
+        android:textStyle="bold"
         android:textSize="20dp" />
 </RelativeLayout>
