--- a/app/src/main/res/layout/crear_cliente.xml
+++ b/app/src/main/res/layout/crear_cliente.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ViewsAdmin.CrearClienteAdmin"
+    tools:context=".Views.CrearClienteAdmin"
     android:orientation="horizontal">
 
 
@@ -39,11 +39,11 @@
         android:layout_marginTop="110dp"
         android:layout_marginEnd="126dp"
         android:layout_marginBottom="589dp"
+        android:fontFamily="@font/ubuntumedium"
         android:hint="@string/crearCliente"
         android:textAlignment="center"
         android:textColorHint="@color/black"
-        android:textSize="24sp"
-        android:fontFamily="@font/ubuntumedium" />
+        android:textSize="24sp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/nombrecrearcliente"
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="60dp"
         android:layout_marginTop="188dp"
-        android:hint="Nombre del cliente">
+        android:hint="@string/nombredelcliente">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -69,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="60dp"
         android:layout_marginTop="288dp"
-        android:hint="Numero de cedula">
+        android:hint="@string/numerodeCedula">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -89,7 +89,7 @@
         android:layout_marginHorizontal="60dp"
         android:layout_marginTop="388dp"
         app:startIconDrawable="@drawable/money"
-        android:hint="Saldo incial">
+        android:hint="@string/saldoInicial">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
