--- a/app/src/main/res/layout/inicio_administrador.xml
+++ b/app/src/main/res/layout/inicio_administrador.xml
@@ -42,11 +42,11 @@
         android:layout_marginStart="28dp"
         android:layout_marginEnd="186dp"
         android:layout_marginBottom="655dp"
+        android:fontFamily="@font/ubuntumedium"
         android:hint="@string/nombreAdmin"
         android:textColor="#FF5F58"
         android:textColorHint="#FF5F58"
-        android:textSize="25dp"
-        android:fontFamily="@font/ubuntumedium"/>
+        android:textSize="25dp" />
 
 
 </RelativeLayout>
