--- a/app/src/main/res/layout/listado_corresponsales_admin.xml
+++ b/app/src/main/res/layout/listado_corresponsales_admin.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewsAdmin.ListadoClientesAdmin">
+    tools:context=".Views.ListadoClientesAdmin">
 
 
     <include
@@ -57,7 +57,7 @@
         android:layout_marginStart="10dp"
         app:startIconDrawable="@drawable/search"
         android:layout_marginEnd="50dp"
-        android:hint="NIT corresponsal">
+        android:hint="@string/numeroNIT">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -70,7 +70,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerlistadoClientesAdmin"
+        android:id="@+id/recyclerlistadoCorresponsalAdmin"
         android:layout_width="354dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
